--- a/src/components/VideoCss.css
+++ b/src/components/VideoCss.css
@@ -1,22 +1,26 @@
 
     .container{
-        overflow:'hidden';
-        height : '100vh';
-        width : '100%';
-        position: 'relative'
-    };
+        overflow:hidden;
+        height : 100vh;
+        width : 100%;
+        position: relative;
+        margin:0;
+        padding: 0;
+    }
     .video{
-        width: '100%';
-        height : '100%';
-         position: 'absolute';
+        width: 100%;
+        height : 100%;
+         position:absolute;
          top: 0;
          left: 0;
-         zIndex: '2' 
-    };
+         zIndex: 2;
+         margin: 0;
+         padding: 0
+    }
     .test{
-        position: 'absolute';
-        top: 'left';
-        left:'50%';
-        zIndex:'5';
-        color: 'red'
+        position: absolute;
+        top: 0;
+        left:40%;
+        zIndex:5;
+        color: red
     }
