--- a/src/components/VideoCss.css
+++ b/src/components/VideoCss.css
@@ -13,7 +13,7 @@
          position:absolute;
          top: 0;
          left: 0;
-         /* z-index:  2; */
+          z-index:2;
          margin: 0;
          padding: 0
     }
