--- a/src/components/Twilio/twilioChat.css
+++ b/src/components/Twilio/twilioChat.css
@@ -3,7 +3,7 @@
     border-radius: 3px;
     height: 400px;
     width: 600px;
-    margin: .5em;
+    margin: 30em;
     font-size: 13px;
     display: flex;
     flex-direction: column;
