--- a/src/components/Twilio/messageForm.css
+++ b/src/components/Twilio/messageForm.css
@@ -1,31 +1,31 @@
 .MessageForm {
-    display: flex;
-    background:blue (109,11,11);
+  display: flex;
+  background:blue (109, 11, 11);
+  
+}
 
-  }
-  
-  .MessageForm .input-container {
-    flex: 1;
-    margin: 1px;
-  }
-  
-  .MessageForm .button-container {
-    flex: 0 0 6em;
-    margin: 1px 1px 1px 0;
-  }
-  
-  .MessageForm input, .MessageForm button {
-    background: #fff;
-    border-radius: 3px;
-    border: 1px solid red;
-    box-sizing: border-box;
-    font-size: inherit;
-    height: 100%;
-    outline: none;
-    width: 100%;
-  }
-  
-  .MessageForm input {
-    padding: 0 0 0 4px;
-  }
-  
+.MessageForm .input-container {
+  flex: 1;
+  margin: 1px;
+}
+
+.MessageForm .button-container {
+  flex: 0 0 6em;
+  margin: 1px 1px 1px 0;
+}
+
+.MessageForm input, .MessageForm button {
+  background: #fff;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  font-size: inherit;
+  height: 100%;
+  outline: none;
+  width: 100%;
+}
+
+.MessageForm input {
+  padding: 0 0 0 4px;
+}
+
