--- a/src/components/SendGrid/grid.css
+++ b/src/components/SendGrid/grid.css
@@ -1,28 +1,29 @@
-.App {
+.Grid {
   text-align: center;
+  background:lightblue
 }
 
-.App-logo {
+.Grid-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
+.Grid-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-title {
+.Grid-title {
   font-size: 1.5em;
 }
 
-.App-intro {
+.Grid-intro {
   font-size: large;
 }
 
-@keyframes App-logo-spin {
+@keyframes Grid-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
