--- a/src/components/Twilio/sms.css
+++ b/src/components/Twilio/sms.css
@@ -1,7 +1,10 @@
-.Sms {
-    background: red
+/* .Sms {
+    background: white
+} */
+body{
+    /* background:url(https://images.unsplash.com/photo-1496737018672-b1a6be2e949c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f0aa3d84be0ad9a656a27a318f055ee9&auto=format&fit=crop&w=800&q=60ttps://images.unsplash.com/photo-1527401850656-0f34108fdb30?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5b30d6d39d6aeb3919b551312ba4afff&auto=format&fit=crop&w=800&q=60); */
+    image-rendering: auto
 }
-
 .send {
     /* background: blue; */
     border: green
